# Text-Editor

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Lexilla.cxx  Makefile  PlatGTK.cxx  README.md  build.sh  deb.out  log  main.cc  main.cpp  nicolas_cage.sh  nicolas_cage_2.sh  nicolas_temp_cage  run.sh  run_tidy.sh  tidy.py
.github/workflows/: c-cpp.yml  cmake.yml
errors/: 1  2
include/: ScintillaHeaders.h  TurboPCH.hpp  debug.hpp  some_shared_include.hpp
include/scintilla/: AutoComplete.h  ILexer.h  Position.h  ScintillaBase.h  ScintillaTypes.h  tscintilla.h
include/scintilla/lexlib/: CatalogueModules.h  LexerModule.h
include/scintilla/src/: CellBuffer.h
include/text-editor/: ScintillaView.hpp  app.hpp  editor.hpp  editorView.hpp  editorWindow.hpp  explorerWindow.hpp  scintillaEditorWindow.hpp  terminal.hpp
include/text-editor-core/: fileWatcher.hpp  timeUtils.hpp
include/turbo/: app.hpp  clockView.hpp  dialogs.hpp  editor.hpp  editorWindow.hpp  explorerWindow.hpp  nicolas_cage.h  sciAdapter.hpp  terminal.hpp
include/turbo-core/: fileWatcher.hpp  timeUtils.hpp
sci-tui/: internals.h  make.sh  makefile  platform.cc
source/: License.txt
source/platform/: font.cc  library.cc  listbox.cc  menu.cc  platform.cc  surface.cc  surface.h  window.cc
source/scintilla/src/: CellBuffer.cxx  Editor.cxx  ExternalLexer.cxx  MarginView.cxx
source/text-editor/: ScintillaView.cpp  app.cpp  clockView.cpp  dialogs.cpp  editor.cpp  editorView.cpp  editorWindow.cpp  explorerWindow.cpp  scintillaEditorWindow.cpp  terminal.cpp
source/text-editor-core/: fileWatcher.cpp  scintilla.cpp  timeUtils.cpp  tscintilla.cpp
source/text-editor-core/platform/: font.cpp  library.cpp  listbox.cpp  menu.cpp  platform.cpp  surface.cpp  surface.h  window.cpp
source/turbo/: app.cpp  app.hpp  clockView.cpp  clockView.hpp  dialogs.cpp  editor.cpp  editorWindow.cpp  explorerWindow.cpp  nicolas_cage.cpp  sciAdapter.cpp  terminal.cpp
source/turbo-core/: fileWatcher.cpp  timeUtils.cpp  xyz.cpp  xyz.hpp
src/: bottom_row.cpp  bottom_row.hpp  debug.hpp  main.cpp  main_window.cpp  main_window.hpp  menu.cpp  menu.hpp  ncurses_utils.cpp  ncurses_utils.hpp  timer.cpp  timer.hpp  top_row.cpp  top_row.hpp  utils.cpp  utils.hpp
